test/errors/traits/ambiguous_instances/main.sk
module Main {

struct Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

instance[T] BarImpl Bar[T] {
    fn bar(self) -> () {

    }
}

instance[Q] BarImpl2 Bar[Q] {
    fn bar(self) -> () {

    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}